--- a/public/beyond-color.html
+++ b/public/beyond-color.html
@@ -297,121 +297,196 @@
                         <div class="by-color-grid" style="background: #171611"></div>
                         <p class="grid-name">P-S-BK40-70</p>
                     </div>
-                    <!-- If no image yet leave as blank -->
+                    <!-- row -->
                     <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
                         <img src="" alt="" class="by-color-grid blank">
-                        <p class="grid-name"></p>
+                        <p class="grid-name">E-SM-GYCL110-9437</p>
                     </div>
-                    <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
-                        <img src="" alt="" class="by-color-grid blank">
-                        <p class="grid-name"></p>
-                    </div>
-                    <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
-                        <img src="" alt="" class="by-color-grid blank">
-                        <p class="grid-name"></p>
-                    </div>
-                    <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
-                        <img src="" alt="" class="by-color-grid blank">
-                        <p class="grid-name"></p>
-                    </div>
-                    <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
-                        <img src="" alt="" class="by-color-grid blank">
-                        <p class="grid-name"></p>
-                    </div>
-                    <!-- If image -->
-                    <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
-                        <img src="img/by-chart/2794.jpg" alt="" class="by-color-grid">
-                        <p class="grid-name">P-SM-GYCL80-2794</p>
-                    </div>
-                    <!-- </div> -->
-                    <!-- If image -->
                     <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
                         <img src="img/by-chart/9172.jpg" alt="" class="by-color-grid">
                         <p class="grid-name">P-SM-GYCL60-9172</p>
                     </div>
-                    <!-- </div> -->
-                    <!-- If image -->
+                    <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
+                        <img src="" alt="" class="by-color-grid blank">
+                        <p class="grid-name">P-SM-GYCL30-363</p>
+                    </div>
                     <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
                         <img src="img/by-chart/364.jpg" alt="" class="by-color-grid">
                         <p class="grid-name">P-SM-GYCL40-364</p>
                     </div>
-                    <!-- </div> -->
-                    <!-- If image -->
+                    <!-- row -->
+                    <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
+                        <img src="" alt="" class="by-color-grid blank">
+                        <p class="grid-name">P-SM-GYCL80-2236</p>
+                    </div>
+                    <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
+                        <img src="img/by-chart/2794.jpg" alt="" class="by-color-grid">
+                        <p class="grid-name">P-SM-GYCL80-2794</p>
+                    </div>
                     <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
                         <img src="img/by-chart/9138.jpg" alt="" class="by-color-grid">
                         <p class="grid-name">P-SM-GYCL80-9138</p>
                     </div>
-                    <!-- </div> -->
-                    <!-- If image -->
+                    <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
+                        <img src="" alt="" class="by-color-grid blank">
+                        <p class="grid-name">P-SM-BKCL30-111</p>
+                    </div>
+                    <!-- row -->
+                    <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
+                        <img src="" alt="" class="by-color-grid blank">
+                        <p class="grid-name">P-SM-BKCL30-9339</p>
+                    </div>
+                    <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
+                        <img src="" alt="" class="by-color-grid blank">
+                        <p class="grid-name">P-SM-BKCL30-20</p>
+                    </div>
+                    <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
+                        <img src="" alt="" class="by-color-grid blank">
+                        <p class="grid-name">P-SM-BKCL30-10</p>
+                    </div>
+                    <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
+                        <img src="" alt="" class="by-color-grid blank">
+                        <p class="grid-name">P-SM-BKCL50-58</p>
+                    </div>
+
+
+                    <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
+                        <img src="" alt="" class="by-color-grid blank">
+                        <p class="grid-name">P-SM-BKCL30-365</p>
+                    </div>
                     <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
                         <img src="img/by-chart/3601.jpg" alt="" class="by-color-grid">
                         <p class="grid-name">P-SM-BRCL30-3601</p>
                     </div>
-                    <!-- </div> -->
-                    <!-- If image -->
                     <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
                         <img src="img/by-chart/j026.jpg" alt="" class="by-color-grid">
                         <p class="grid-name">P-SM-YLCL40-J026</p>
                     </div>
-                    <!-- </div> -->
-                    <!-- If image -->
+                    <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
+                        <img src="" alt="" class="by-color-grid blank">
+                        <p class="grid-name">P-SM-RDCL80-049</p>
+                    </div>
+
+
+                    <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
+                        <img src="" alt="" class="by-color-grid blank">
+                        <p class="grid-name">P-SDTM-GY10-301</p>
+                    </div>
                     <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
                         <img src="img/by-chart/1168.jpg" alt="" class="by-color-grid">
                         <p class="grid-name">P-SDTM-BK10-1168</p>
                     </div>
-                    <!-- </div> -->
-                    <!-- If image -->
                     <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
                         <img src="img/by-chart/116.jpg" alt="" class="by-color-grid">
                         <p class="grid-name">P-SDTM-BR10-116</p>
                     </div>
-                    <!-- </div> -->
-                    <!-- If image -->
+                    <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
+                        <img src="" alt="" class="by-color-grid blank">
+                        <p class="grid-name">P-SDTM-BK10-366</p>
+                    </div>
+
+
+                    <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
+                        <img src="" alt="" class="by-color-grid blank">
+                        <p class="grid-name">E-SDT-GN20-573</p>
+                    </div>
+                    <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
+                        <img src="" alt="" class="by-color-grid blank">
+                        <p class="grid-name">P-SDT-BR10-201</p>
+                    </div>
+                    <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
+                        <img src="" alt="" class="by-color-grid blank">
+                        <p class="grid-name">P-SDT-BR10-1141</p>
+                    </div>
                     <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
                         <img src="img/by-chart/157.jpg" alt="" class="by-color-grid">
                         <p class="grid-name">P-SDT-BK30-157</p>
                     </div>
-                    <!-- </div> -->
-                    <!-- If image -->
+
                     <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
                         <img src="img/by-chart/7210.jpg" alt="" class="by-color-grid">
                         <p class="grid-name">P-SDT-BK10-7210</p>
                     </div>
-                    <!-- </div> -->
-                    <!-- If image -->
+                    <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
+                        <img src="" alt="" class="by-color-grid blank">
+                        <p class="grid-name">P-SDT-BK5-1219</p>
+                    </div>
                     <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
                         <img src="img/by-chart/1700.jpg" alt="" class="by-color-grid">
                         <p class="grid-name">P-T-BK60-1700</p>
                     </div>
-                    <!-- </div> -->
-                    <!-- If image -->
                     <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
                         <img src="img/by-chart/367.jpg" alt="" class="by-color-grid">
                         <p class="grid-name">P-T-BK60-367</p>
                     </div>
-                    <!-- </div> -->
-                    <!-- If image -->
+
+                    <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
+                        <img src="" alt="" class="by-color-grid blank">
+                        <p class="grid-name">E-S-GY80-205</p>
+                    </div>
+                    <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
+                        <img src="" alt="" class="by-color-grid blank">
+                        <p class="grid-name">P-T-GN60-013</p>
+                    </div>
+                    <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
+                        <img src="" alt="" class="by-color-grid blank">
+                        <p class="grid-name">P-T-GY60-52</p>
+                    </div>
                     <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
                         <img src="img/by-chart/060.jpg" alt="" class="by-color-grid">
                         <p class="grid-name">E-V-GN30-060</p>
                     </div>
-                    <!-- </div> -->
-                    <!-- If image -->
+
+                    <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
+                        <img src="" alt="" class="by-color-grid blank">
+                        <p class="grid-name">P-V-BK20-121</p>
+                    </div>
                     <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
                         <img src="img/by-chart/307.jpg" alt="" class="by-color-grid">
                         <p class="grid-name">E-V-BK50-307</p>
                     </div>
-                    <!-- </div> -->
-                    <!-- If image -->
                     <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
                         <img src="img/by-chart/017.jpg" alt="" class="by-color-grid">
                         <p class="grid-name">P-V-BK60-017</p>
                     </div>
-                    <!-- </div> -->
-                    <!-- If image -->
+                    <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
+                        <img src="" alt="" class="by-color-grid blank">
+                        <p class="grid-name">P-V-BR60-354</p>
+                    </div>
+
+
+                    <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
+                        <img src="" alt="" class="by-color-grid blank">
+                        <p class="grid-name">P-V-BR50-278</p>
+                    </div>
                     <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
                         <img src="img/by-chart/Copper.jpg" alt="" class="by-color-grid">
                         <p class="grid-name">P-V-BR60-COPPER</p>
+                    </div>
+                    <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
+                        <img src="" alt="" class="by-color-grid blank">
+                        <p class="grid-name">E-TM-GN60-COO6J</p>
+                    </div>
+                    <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
+                        <img src="" alt="" class="by-color-grid blank">
+                        <p class="grid-name">E-TM-GN60-COO7</p>
+                    </div>
+
+                    <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
+                        <img src="" alt="" class="by-color-grid blank">
+                        <p class="grid-name">E-V-BK60-425</p>
+                    </div>
+                    <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
+                        <img src="" alt="" class="by-color-grid blank">
+                        <p class="grid-name">P-W-BK40-099</p>
+                    </div>
+                    <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
+                        <img src="" alt="" class="by-color-grid blank">
+                        <p class="grid-name">P-W-GY40-0888</p>
+                    </div>
+                    <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
+                        <img src="" alt="" class="by-color-grid blank">
+                        <p class="grid-name">P-W-BR40-RAL8017</p>
                     </div>
                 </div>
         </section>
