--- a/public/beyond-color.html
+++ b/public/beyond-color.html
@@ -316,7 +316,7 @@
                     </div>
                     <!-- row -->
                     <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
-                        <img src="" alt="" class="by-color-grid blank">
+                        <img src="img/by-chart/2236.jpg" alt="" class="by-color-grid">
                         <p class="grid-name">P-SM-GYCL80-2236</p>
                     </div>
                     <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
@@ -408,7 +408,7 @@
                         <p class="grid-name">P-SDT-BK10-7210</p>
                     </div>
                     <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
-                        <img src="" alt="" class="by-color-grid blank">
+                        <img src="img/by-chart/1219.jpg" alt="" class="by-color-grid">
                         <p class="grid-name">P-SDT-BK5-1219</p>
                     </div>
                     <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
@@ -464,7 +464,7 @@
                         <p class="grid-name">P-V-BR60-COPPER</p>
                     </div>
                     <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
-                        <img src="" alt="" class="by-color-grid blank">
+                        <img src="img/by-chart/COO6J.jpg" alt="" class="by-color-grid">
                         <p class="grid-name">E-TM-GN60-COO6J</p>
                     </div>
                     <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
