--- a/public/beyond-color.html
+++ b/public/beyond-color.html
@@ -345,7 +345,7 @@
                         <p class="grid-name">P-SM-BKCL30-10</p>
                     </div>
                     <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
-                        <img src="img/by-chart/58.jpg" alt="" class="by-color-grid blank">
+                        <img src="img/by-chart/58.jpg" alt="" class="by-color-grid">
                         <p class="grid-name">P-SM-BKCL50-58</p>
                     </div>
 
@@ -369,7 +369,7 @@
 
 
                     <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
-                        <img src="img/by-chart/301.jpg" alt="" class="by-color-grid blank">
+                        <img src="img/by-chart/301.jpg" alt="" class="by-color-grid">
                         <p class="grid-name">P-SDTM-GY10-301</p>
                     </div>
                     <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
@@ -381,7 +381,7 @@
                         <p class="grid-name">P-SDTM-BR10-116</p>
                     </div>
                     <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
-                        <img src="img/by-chart/366.jpg" alt="" class="by-color-grid blank">
+                        <img src="img/by-chart/366.jpg" alt="" class="by-color-grid">
                         <p class="grid-name">P-SDTM-BK10-366</p>
                     </div>
 
@@ -473,19 +473,19 @@
                     </div>
 
                     <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
-                        <img src="img/by-chart/425.jpg" alt="" class="by-color-grid blank">
+                        <img src="img/by-chart/425.jpg" alt="" class="by-color-grid">
                         <p class="grid-name">E-V-BK60-425</p>
                     </div>
                     <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
-                        <img src="img/by-chart/099.jpg" alt="" class="by-color-grid blank">
+                        <img src="img/by-chart/099.jpg" alt="" class="by-color-grid">
                         <p class="grid-name">P-W-BK40-099</p>
                     </div>
                     <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
-                        <img src="" alt="" class="by-color-grid blank">
+                        <img src="" alt="" class="by-color-grid">
                         <p class="grid-name">P-W-GY40-0888</p>
                     </div>
                     <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
-                        <img src="img/by-chart/8017.jpg" alt="" class="by-color-grid blank">
+                        <img src="img/by-chart/8017.jpg" alt="" class="by-color-grid">
                         <p class="grid-name">P-W-BR40-RAL8017</p>
                     </div>
                 </div>
