--- a/public/beyond-color.html
+++ b/public/beyond-color.html
@@ -481,7 +481,7 @@
                         <p class="grid-name">P-W-BK40-099</p>
                     </div>
                     <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
-                        <img src="" alt="" class="by-color-grid">
+                        <img src="" alt="" class="by-color-grid blank">
                         <p class="grid-name">P-W-GY40-0888</p>
                     </div>
                     <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
