--- a/public/beyond-color.html
+++ b/public/beyond-color.html
@@ -299,7 +299,7 @@
                     </div>
                     <!-- row -->
                     <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
-                        <img src="" alt="" class="by-color-grid blank">
+                        <img src="img/by-chart/9437.jpg" alt="" class="by-color-grid">
                         <p class="grid-name">E-SM-GYCL110-9437</p>
                     </div>
                     <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
@@ -307,7 +307,7 @@
                         <p class="grid-name">P-SM-GYCL60-9172</p>
                     </div>
                     <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
-                        <img src="" alt="" class="by-color-grid blank">
+                        <img src="img/by-chart/363.jpg" alt="" class="by-color-grid">
                         <p class="grid-name">P-SM-GYCL30-363</p>
                     </div>
                     <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
@@ -328,20 +328,20 @@
                         <p class="grid-name">P-SM-GYCL80-9138</p>
                     </div>
                     <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
-                        <img src="" alt="" class="by-color-grid blank">
+                        <img src="img/by-chart/111.jpg" alt="" class="by-color-grid">
                         <p class="grid-name">P-SM-BKCL30-111</p>
                     </div>
                     <!-- row -->
                     <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
-                        <img src="" alt="" class="by-color-grid blank">
+                        <img src="img/by-chart/9339.jpg" alt="" class="by-color-grid">
                         <p class="grid-name">P-SM-BKCL30-9339</p>
                     </div>
                     <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
-                        <img src="" alt="" class="by-color-grid blank">
+                        <img src="img/by-chart/20.jpg" alt="" class="by-color-grid">
                         <p class="grid-name">P-SM-BKCL30-20</p>
                     </div>
                     <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
-                        <img src="" alt="" class="by-color-grid blank">
+                        <img src="img/by-chart/10.jpg" alt="" class="by-color-grid">
                         <p class="grid-name">P-SM-BKCL30-10</p>
                     </div>
                     <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
@@ -351,7 +351,7 @@
 
 
                     <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
-                        <img src="" alt="" class="by-color-grid blank">
+                        <img src="img/by-chart/365.jpg" alt="" class="by-color-grid">
                         <p class="grid-name">P-SM-BKCL30-365</p>
                     </div>
                     <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
@@ -363,7 +363,7 @@
                         <p class="grid-name">P-SM-YLCL40-J026</p>
                     </div>
                     <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
-                        <img src="" alt="" class="by-color-grid blank">
+                        <img src="img/by-chart/049.jpg" alt="" class="by-color-grid">
                         <p class="grid-name">P-SM-RDCL80-049</p>
                     </div>
 
@@ -387,15 +387,15 @@
 
 
                     <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
-                        <img src="" alt="" class="by-color-grid blank">
+                        <img src="img/by-chart/573.jpg" alt="" class="by-color-grid">
                         <p class="grid-name">E-SDT-GN20-573</p>
                     </div>
                     <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
-                        <img src="" alt="" class="by-color-grid blank">
+                        <img src="img/by-chart/201.jpg" alt="" class="by-color-grid">
                         <p class="grid-name">P-SDT-BR10-201</p>
                     </div>
                     <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
-                        <img src="" alt="" class="by-color-grid blank">
+                        <img src="img/by-chart/1141.jpg" alt="" class="by-color-grid">
                         <p class="grid-name">P-SDT-BR10-1141</p>
                     </div>
                     <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
@@ -421,11 +421,11 @@
                     </div>
 
                     <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
-                        <img src="" alt="" class="by-color-grid blank">
+                        <img src="img/by-chart/205.jpg" alt="" class="by-color-grid">
                         <p class="grid-name">E-S-GY80-205</p>
                     </div>
                     <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
-                        <img src="" alt="" class="by-color-grid blank">
+                        <img src="img/by-chart/013.jpg" alt="" class="by-color-grid">
                         <p class="grid-name">P-T-GN60-013</p>
                     </div>
                     <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
@@ -438,7 +438,7 @@
                     </div>
 
                     <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
-                        <img src="" alt="" class="by-color-grid blank">
+                        <img src="img/by-chart/121.jpg" alt="" class="by-color-grid">
                         <p class="grid-name">P-V-BK20-121</p>
                     </div>
                     <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
@@ -450,13 +450,13 @@
                         <p class="grid-name">P-V-BK60-017</p>
                     </div>
                     <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
-                        <img src="" alt="" class="by-color-grid blank">
+                        <img src="img/by-chart/354.jpg" alt="" class="by-color-grid">
                         <p class="grid-name">P-V-BR60-354</p>
                     </div>
 
 
                     <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
-                        <img src="" alt="" class="by-color-grid blank">
+                        <img src="img/by-chart/278.jpg" alt="" class="by-color-grid">
                         <p class="grid-name">P-V-BR50-278</p>
                     </div>
                     <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
@@ -468,7 +468,7 @@
                         <p class="grid-name">E-TM-GN60-COO6J</p>
                     </div>
                     <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
-                        <img src="" alt="" class="by-color-grid blank">
+                        <img src="img/by-chart/COO7.jpg" alt="" class="by-color-grid">
                         <p class="grid-name">E-TM-GN60-COO7</p>
                     </div>
 
@@ -481,7 +481,7 @@
                         <p class="grid-name">P-W-BK40-099</p>
                     </div>
                     <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
-                        <img src="" alt="" class="by-color-grid blank">
+                        <img src="img/by-chart/0888.jpg" alt="" class="by-color-grid">
                         <p class="grid-name">P-W-GY40-0888</p>
                     </div>
                     <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
