--- a/public/about.html
+++ b/public/about.html
@@ -100,7 +100,7 @@
                             Beyond Powder Coatings Ltd is a professional powder coating company who dedicates our superior performance powder coatings and high quality service to World coating markets. We had gained fully support from a Chinese Powder Coating Manufacture Company who is currently recognized as one of the most technical and professional powder coating manufacture in China.
                             </p>
                             <p>
-                                Who We Are
+                                Who we are.
                             </p>
                             <ul>
                                 <li>First-class powder coatings manufacture and distributor</li>
@@ -109,7 +109,7 @@
                                 <li>Always available for emergency service</li>
                             </ul>
                             <p>
-                                What we do
+                                What we do.
                             </p>
                             <ul>
                                 <li>Quality assurance powder coatings.</li>
