--- a/public/beyond-color.html
+++ b/public/beyond-color.html
@@ -84,13 +84,13 @@
             </div>
         </header>
         <section>
-            <div class="container" style="">
+            <div class="container" style="margin-bottom: 80px;">
                 <div class="section-title" style="margin-top: 60px;">
                     <h2><span>BEYOND COLOR CHART</span></h2>
                 </div>
                 <div class="color-charts">
                     <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
-                        <div class="by-color-grid" style="background: #FFFFFF; border: 1px solid;"></div>
+                        <div class="by-color-grid" style="background: rgb(246,246,245);"></div>
                         <p class="grid-name">P-S-WH90-52</p>
                     </div>
                     <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
@@ -106,15 +106,15 @@
                         <p class="grid-name">P-S-WH90-RAL9016</p>
                     </div>
                     <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
-                        <div class="by-color-grid" style="background: #FFFFFF; border: 1px solid;"></div>
+                        <div class="by-color-grid" style="background: rgb(240, 250, 235);"></div>
                         <p class="grid-name">PP-S-WH90-656</p>
                     </div>
                     <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
-                        <div class="by-color-grid" style="background: #FFFFFF; border: 1px solid;"></div>
+                        <div class="by-color-grid" style="background: #FFFFFF;"></div>
                         <p class="grid-name">P-S-WH90-456</p>
                     </div>
                     <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
-                        <div class="by-color-grid" style="background: #FFFFFF; border: 1px solid;"></div>
+                        <div class="by-color-grid" style="background: rgb(240, 255, 234);"></div>
                         <p class="grid-name">P-S-WH90-803233</p>
                     </div>
                     <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
@@ -122,15 +122,15 @@
                         <p class="grid-name">E-S-GY90-89012</p>
                     </div>
                     <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
-                        <div class="by-color-grid" style="background: #6D818A; border: 1px solid;"></div>
+                        <div class="by-color-grid" style="background: #6D818A;"></div>
                         <p class="grid-name">P-S-GY60-32</p>
                     </div>
                     <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
-                        <div class="by-color-grid" style="background: #556C7C; border: 1px solid;"></div>
+                        <div class="by-color-grid" style="background: #556C7C;"></div>
                         <p class="grid-name">P-S-BL80-696</p>
                     </div>
                     <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
-                        <div class="by-color-grid" style="background: #162C39; border: 1px solid;"></div>
+                        <div class="by-color-grid" style="background: #162C39;"></div>
                         <p class="grid-name">P-S-GY90-RAL7015</p>
                     </div>
                     <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
