--- a/public/our-service-theory.html
+++ b/public/our-service-theory.html
@@ -104,10 +104,10 @@
                             Pre-sales Service: We provide our customers consultative service and offer solutions to customers’ projects.
                             </p>
                             <ul>
-                                <li>Strong service team, professional service quality, respectable attitude towards our customers</li>
-                                <li>Provide customer color selection, free color matching service regardless of your company sizes</li>
-                                <li>Provide customer free powder samples for tryouts</li>
-                                <li>Co-operate with customers to help design products accordingly</li>
+                                <li>Strong service team, professional service quality, respectable attitude towards our customers.</li>
+                                <li>Provide customer color selection, free color matching service regardless of your company sizes.</li>
+                                <li>Provide customer free powder samples for tryouts.</li>
+                                <li>Co-operate with customers to help design products accordingly.</li>
                             </ul>
                             <p>
                                 Sales Service: Our customers can rely on our company scale and modern production mode, we will always delivery our customers’ product on time.
