--- a/public/about.html
+++ b/public/about.html
@@ -100,16 +100,16 @@
                             Beyond Powder Coatings Ltd is a professional powder coating company who dedicates our superior performance powder coatings and high quality service to World coating markets. We had gained fully support from a Chinese Powder Coating Manufacture Company who is currently recognized as one of the most technical and professional powder coating manufacture in China.
                             </p>
                             <p>
-                                Who we are.
+                                Who we are
                             </p>
                             <ul>
-                                <li>First-class powder coatings manufacture and distributor</li>
-                                <li>Elite group of professional engineers and technicians</li>
-                                <li>Located in Canada to serve North America, Canada and the South America</li>
-                                <li>Always available for emergency service</li>
+                                <li>First-class powder coatings manufacture and distributor.</li>
+                                <li>Elite group of professional engineers and technicians.</li>
+                                <li>Located in Canada to serve North America, Canada and the South America.</li>
+                                <li>Always available for emergency service.</li>
                             </ul>
                             <p>
-                                What we do.
+                                What we do
                             </p>
                             <ul>
                                 <li>Quality assurance powder coatings.</li>
@@ -117,7 +117,6 @@
                                 <li>Over 150 in-stock powder coating colors.</li>
                                 <li>Able to help any size of the orders.</li>
                                 <li>Excellent customer service.</li>
-
                             </ul>
                             <p>
                             Our manufacture had reached out yearly production at 15000 tons of powder coating in 2014 and we are continuously growing. We are proud of having a technical and professional production team as well as a high efficiency management team to help us manufacture powder coatings. We will take seeking continuously, working energetically, honesty and trustworthiness as Beyond Powder Coatings Ltd. sense of value to make us famous of the world.
